--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ permalink: /
   </div>
 </section>
 <!-- Content Start -->
-<section id="testimonial">
+<!-- <section id="testimonial">
   <div class="container">
     <div class="row">
       <div class="section-title text-center">
@@ -182,4 +182,4 @@ permalink: /
       </div>
     </div>
   </div>
-</section>
+</section> -->
