--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ permalink: /
       <div class="col-md-7 col-sm-12">
         <div class="block">
           <div class="section-title">
-            <h2>About Us</h2>
+            <h2>About Me</h2>
             <p> 哈哈</p>
           </div>
           <p>嘿嘿</p>
@@ -43,7 +43,7 @@ permalink: /
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-6">
-      <h2>WE BELIEVE IN GREAT IDEAS</h2>
+      <h2> Regarding on my works</h2>
       <p>I have a strong passion for work</p>
       <p>lei lei lei lei lei lei lei lei ho ho ho ho</p>
       <a href="work" class="btn btn-view-works">View Works</a>
