--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ permalink: /
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
           <h1 class="animated fadeInUp"> Live a happy life </h1>
-          <p class="animated fadeInUp"> love the work and love the life, under the sunshine and get grown  </p>
+          <p class="animated fadeInUp"> love the work and love the life <br> under the sunshine and get grown  </p>
         </div>
       </div>
     </div>
@@ -57,11 +57,11 @@ permalink: /
   <div class="container">
     <div class="row">
       <div class="section-title">
-        <h2>Our Services</h2>
+        <h2>No No No No</h2>
         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
       </div>
     </div>
-    <div class="row ">
+    <!-- <div class="row ">
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="icon ion-coffee"></i>
@@ -119,7 +119,7 @@ permalink: /
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </section>
 <!-- Call to action Start -->
 <section id="call-to-action">
@@ -127,9 +127,9 @@ permalink: /
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+          <h2>Regarding to my university</h2>
+          <p> Regarding my work </p>
+          <a class="btn btn-default btn-call-to-action" href="#" >to another web</a>
         </div>
       </div>
     </div>
