--- a/cv.html
+++ b/cv.html
@@ -23,8 +23,8 @@ permalink: /cv/
       <div class="col-md-12">
         <div class="block">
           <h2>MY CV</h2>
-          <p> download </p>
-          <a class="btn btn-default btn-call-to-action" href="/img/LCL_CV.pdf" >to another web</a>
+<!--           <p> download </p> -->
+          <a class="btn btn-default btn-call-to-action" href="/img/LCL_CV.pdf" >download</a>
         </div>
       </div>
     </div>
