--- a/work.html
+++ b/work.html
@@ -124,40 +124,40 @@ permalink: /work/
         <div class="block">
           <div id="clients-logo" class="owl-carousel">
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/wuhan.png" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/zhejiang.jpg" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/ucsb.jpg" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/wuhan.png" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/zhejiang.jpg" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/ucsb.jpg" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/wuhan.png" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/zhejiang.jpg" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/ucsb.jpg" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/wuhan.png" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/zhejiang.jpg" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/ucsb.jpg" alt="Features">
             </div>
           </div>
         </div>
