--- a/work.html
+++ b/work.html
@@ -124,40 +124,40 @@ permalink: /work/
         <div class="block">
           <div id="clients-logo" class="owl-carousel">
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/wuhan.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/wuhan.png " width="70" height="70" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/zhejiang.jpg" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/zhejiang.jpg" width="70" height="70" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/ucsb.jpg" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/ucsb.jpg" width="70" height="70" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/wuhan.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/wuhan.png" width="70" height="70" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/zhejiang.jpg" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/zhejiang.jpg" width="70" height="70" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/ucsb.jpg" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/ucsb.jpg" width="70" height="70" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/wuhan.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/wuhan.png" width="70" height="70" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/zhejiang.jpg" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/zhejiang.jpg" width="70" height="70" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/ucsb.jpg" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/ucsb.jpg" width="70" height="70" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/wuhan.png" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/wuhan.png" width="70" height="70" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/zhejiang.jpg" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/zhejiang.jpg" width="70" height="70" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/ucsb.jpg" alt="Features">
+              <img src="{{ site.baseurl }}/img/clients/ucsb.jpg" width="70" height="70"  alt="Features">
             </div>
           </div>
         </div>
